--- a/app/stylesheets/tour.sass
+++ b/app/stylesheets/tour.sass
@@ -272,6 +272,7 @@ p.welcome-divider
 
 #findNeighbors 
   display: inline-block
+  width: 640px
   background-color: #eeecdf
   background: url(shared/redesign/tan-bg.png) center center
   z-index: 1000
